Fix #330. Visibilize create project button in tablets.

--- a/src/sass/plus.sass
+++ b/src/sass/plus.sass
@@ -14,9 +14,11 @@ plus:not([text ])
     color: inherit
 
 .plus-mobile
-  @extend .hidden-desktop
+  @extend .hidden-sm
+  @extend .hidden-md
+  @extend .hidden-lg
 
 .plus-desktop
-  @extend .hidden-mobile
+  @extend .hidden-xs
   top: 19px
   bottom: auto
